<resources>
    <string name="app_name">Health Care System</string>
    <string name="url">http://192.168.1.30:8000/api/</string>
    <string name="downloadurl">http://192.168.1.30:8000/</string>
    <!--    <string name="url">http://172.16.9.232:8000/api/</string>-->
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="driver">Driver</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="specialist">Specialist</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dob">Date of Birth</string>
    <string name="age">Age</string>
    <string name="prescribeMedicine">Prescribe Medicine</string>
    <string name="prescription">Prescription</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="advice">Advice</string>
    <string name="medicineName">Medicine Name</string>
    <string name="medicineType">Medicine Type : </string>
    <string name="beforeBreakfast">Before Break Fast</string>
    <string name="afterBreakfast">After Break Fast</string>
    <string name="beforeLunch">Before Lunch</string>
    <string name="afterLunch">After Lunch</string>
    <string name="beforeDinner">Before Dinner</string>
    <string name="afterDinner">After Dinner</string>
    <string name="evening">Evening</string>
    <string name="noOfTablets">No of Tablets</string>
    <string name="noOfCapsules">No of Capsules</string>
    <string name="syrupAmount">Syrup Amount (ml)</string>
    <string name="duration">Duration (No of Days)</string>
    <string name="addMedicine">Add Medicine</string>
    <string name="amount">Amount</string>
    <string name="viewDetails">View Details</string>
    <string name="orderNow">Order Now</string>
    <string name="patientRegistration">Patient Registration</string>
    <string name="doctorRegistration">Doctor Registration</string>
    <string name="driverRegistration">Driver Registration</string>
    <string name="nutritionistRegistration">Nutritionist Registration</string>
    <string name="consultationCharge">Consultation Charge</string>
    <string name="upload">Upload</string>
    <string name="nofile">No File Selected</string>
    <string name="uploadReport">Upload Report</string>
    <string name="reportName">Report Name</string>
    <string name="remark">Remark (Optional)</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>