<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrescribeMedicineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/prescription"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Patient : "
                android:textSize="26sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/diagnosisET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bc"
                    android:hint="@string/diagnosis"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/medicineAddLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addMedicine"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:background="@drawable/bc"
                android:backgroundTint="@color/teal_200"
                android:text="@string/addMedicine"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adviceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bc"
                    android:hint="@string/advice"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/precribeMedicine"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/bc"
                android:backgroundTint="@color/orange"
                android:text="@string/prescribeMedicine"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>